--- a/Content/mainstyle.css
+++ b/Content/mainstyle.css
@@ -98,7 +98,7 @@ li:hover {
   width: 80%;
   margin: 0 auto;
   border-radius: 10px;
-  background-color: rgba(250, 250, 250, 0.3);
+  background-color: white;
   color: black;
   display: flex;
   flex-direction: row;
@@ -108,9 +108,6 @@ li:hover {
 }
 .navbar_main .toggle_button {
   display: none;
-}
-.navbar_main:hover {
-  opacity: 1;
 }
 .navbar_main .nav_again {
   display: flex;
@@ -163,7 +160,7 @@ li:hover {
 }
 .cards_container .cards h4 {
   font-family: "Inter", sans-serif;
-  font-weight: 900;
+  font-weight: 400;
 }
 .cards_container .cards img {
   margin-top: 15px;
@@ -314,6 +311,61 @@ footer .footer_first_div a:hover {
   color: #B61E03;
 }
 
+/*HİZMETLER*/
+.main_back {
+  position: relative;
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  top: -100px;
+}
+.main_back div {
+  text-align: center;
+  position: relative;
+  left: 15%;
+  top: 10%;
+  width: 65%;
+}
+.main_back div h1 {
+  color: #B61E03;
+  margin-bottom: -1rem;
+  margin-left: 3rem;
+}
+
+.big_font {
+  font-size: 4rem;
+}
+
+.havayolu {
+  background-image: url("../wwwroot/svgss/havayolu.webp");
+}
+
+.denizyolu {
+  background-image: url("../wwwroot/svgss/denizyolu.webp");
+}
+
+.depolama {
+  background-image: url("../wwwroot/svgss/depolama.webp");
+}
+
+.danismanlik {
+  background-image: url("../wwwroot/svgss/danısmanlikk.webp");
+}
+
+.karayolu {
+  background-image: url("../wwwroot/svgss/karayolu.webp");
+}
+
+.sigorta {
+  background-image: url("../wwwroot/svgss/insurance.webp");
+}
+
+.silahvemuh {
+  background-image: url("../wwwroot/svgss/silahvemuhimmat.webp");
+}
+
 /*KURUMSAL*/
 .kurumsal_main {
   position: relative;
@@ -367,32 +419,55 @@ footer .footer_first_div a:hover {
 }
 
 /* MEDIA QUERIES*/
-@media (max-width: 480px) and (min-width: 320px) {
+@media (max-width: 480px) and (min-width: 300px) {
   .navbar_main {
     top: 0;
-    opacity: 0.7;
+    opacity: 1;
     position: sticky;
     z-index: 999;
+    height: 100px;
     width: 80%;
     margin: 0 auto;
     background-color: white;
     color: black;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     transition: ease-in-out 0.7s;
   }
 
-  .toggle_button {
-    display: block !important;
+  .nav_againn .nav a img {
+    width: 100px !important;
+    margin-left: auto;
   }
 
   .nav_again {
     display: none !important;
   }
+  .nav_again .nav-hover a {
+    margin-top: -3rem !important;
+    font-weight: 400 !important;
+    font-size: 1.4rem !important;
+  }
+  .nav_again .parent-link {
+    position: absolute;
+    margin-top: 2.4rem;
+  }
+  .nav_again .parent-link a {
+    font-weight: 400;
+    font-size: 1.4rem !important;
+  }
+  .nav_again .parent-link .sub-links {
+    background-color: white !important;
+    padding: 10px;
+  }
+  .nav_again .parent-link .sub-links a {
+    font-weight: 400 !important;
+    font-size: 1.2rem !important;
+  }
 
-  .hidden-visible {
+  .toggle_button {
     display: block !important;
   }
 
@@ -476,7 +551,27 @@ footer .footer_first_div a:hover {
   .container .iletisim_container .iletisim_container2 {
     margin-top: 5rem !important;
   }
+  .main_back {
+    width: 100%;
+    background-position: center;
+  }
+  .main_back div h1 {
+    font-size: 4rem;
+  }
+
+  .hidden-visible {
+    display: block !important;
+  }
+
+  .havayolu_maindiv div .big_font {
+    font-size: 2rem;
+  }
+  .havayolu_maindiv div ul li {
+    font-size: 1.5rem !important;
+  }
+
   footer {
     flex-direction: column;
+    margin-left: 2rem;
   }
 }
