--- a/Views/Hizmetlerimiz/HavaYoluTasimaciligi.cshtml
+++ b/Views/Hizmetlerimiz/HavaYoluTasimaciligi.cshtml
@@ -2,35 +2,41 @@
 @{
     ViewBag.Title = "ISM LOGISTICS";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    
+
 }
 <head>
     <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
 </head>
+<body>
+
+<div class="main_back havayolu">
+    <div>
+        <h1>HAVAYOLU TAŞIMACILIĞI</h1>
+    </div>
+</div>
+
 <div class="container body-content">
 
-<h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Havayolu Taşımacılığı</h1>
-<div class="havayolu_maindiv">
-    <div>
-
-    <img src="~/wwwroot/svgss/havayolu.webp" />
+  
+    <div class="havayolu_maindiv">
+        <div>
+            <p class="big_font">
+                Global alandaki çözüm ortaklarımız ile havayolu taşımacılığında, dünyanın her noktasına hizmet sağlamaktayız.<br /><br /> Alanında deneyimli kadromuz ve havalimanı
+                ekibimiz ile zamanında ve etkin lojistik çözümler sunmaktayız.
+            </p>
+            <ul style="font-size:4rem;">
+                <li>Genel Kargo Taşımaları </li>
+                <li>Bozulabilir Kargo Taşımaları</li>
+                <li>Charter Taşımaları</li>
+                <li>Mühimmat ve Ağır Silah Taşımalar</li>
+                <li> Tehlikeli Madde Taşımaları</li>
+                <li>Transit Taşımalar</li>
+                <li>Konsolide/Standard/ Express Servisler</li>
+            </ul>
+        </div>
     </div>
-    <div>
-
-        <p>
-            Global alandaki çözüm ortaklarımız ile havayolu taşımacılığında, dünyanın her noktasına hizmet sağlamaktayız.<br /><br /> Alanında deneyimli kadromuz ve havalimanı 
-            ekibimiz ile zamanında ve etkin lojistik çözümler sunmaktayız.
-        </p>
-        <ul style="font-size:1.5rem;">
-        <li>Genel Kargo Taşımaları </li>
-        <li>Bozulabilir Kargo Taşımaları</li>
-        <li>Charter Taşımaları</li>
-        <li>Mühimmat ve Ağır Silah Taşımalar</li>
-        <li> Tehlikeli Madde Taşımaları</li>
-        <li>Transit Taşımalar</li>
-        <li>Konsolide/Standard/ Express Servisler</li>
-         </ul>
-    </div>
-</div>
 
 </div>
+    
+<script src="~/Content/Jscript.js"></script>
+</body>
