--- a/Views/Hizmetlerimiz/KarayoluTasimaciligi.cshtml
+++ b/Views/Hizmetlerimiz/KarayoluTasimaciligi.cshtml
@@ -6,21 +6,22 @@
 <head>
     <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
 </head>
+<div class="main_back karayolu">
+    <div>
+        <h1>KARAYOLU TAŞIMACILIĞI</h1>
+    </div>
+</div>
 <div class="container body-content">
 
-<h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Karayolu Taşımacılığı</h1>
 <div class="havayolu_maindiv">
+
     <div>
 
-        <img src="~/wwwroot/svgss/karayolu.webp" />
-    </div>
-    <div>
-
-        <p>
+        <p class="big_font">
             Global alandaki çözüm ortaklarımız ile karayolu taşımacılığında, parsiyel ve komple taşıma hizmeti sağlamaktayız.
 
         </p>
-        <ul style="font-size:1.5rem;">
+        <ul style="font-size: 4rem;">
             <li>Komple Tenteli Tır yüklemeleri </li>
             <li>Parsiyel Tır yüklemeleri</li>
             <li>Frigorifik Taşımalar</li>
