--- a/Views/Hizmetlerimiz/SilahveMuhimmatTasimaciligi.cshtml
+++ b/Views/Hizmetlerimiz/SilahveMuhimmatTasimaciligi.cshtml
@@ -6,24 +6,20 @@
 <head>
     <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
 </head>
+<div class="main_back silahvemuh">
+    <div>
+        <h1>SİLAH VE MÜHİMMAT<br /> TAŞIMACILIĞI</h1>
+    </div>
+</div>
+
 <div class="container body-content">
 
-<h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Silah ve Mühimmat Taşımacılığı</h1>
-<div class="havayolu_maindiv">
-    <div>
 
-        <img src="~/wwwroot/svgss/silahvemuhimmat.webp" />
-    </div>
+<div class="havayolu_maindiv">   
     <div>
-
-        <p>
+        <p class="big_font" >
             Silah ve mühimmat taşımacılığında deneyimli ve güçlü kadromuz ile güvenilir hizmet sunmaktayız.
         </p>
-        <ul style="font-size:1.5rem;">
-           
-
-
-        </ul>
     </div>
 </div>
 
