--- a/Content/mainstyle.scss
+++ b/Content/mainstyle.scss
@@ -113,7 +113,7 @@ background-image: url('../wwwroot/svgss/hakkımızda.webp');
     width: 80%;
     margin: 0 auto;
     border-radius:10px;
-    background-color: rgba(250,250,250,.3);
+    background-color: white;
     color: black;
     display: flex;
     flex-direction: row;
@@ -125,15 +125,11 @@ background-image: url('../wwwroot/svgss/hakkımızda.webp');
     .toggle_button{
         display:none;
     }
-    &:hover {
-        opacity: 1;
-    }
-
-
+  
     .nav_again {
         display: flex;
         flex-direction: row;
-
+        
 
 
         .nav-hover {
@@ -191,7 +187,7 @@ background-image: url('../wwwroot/svgss/hakkımızda.webp');
 
         h4 {
             font-family: 'Inter', sans-serif;
-            font-weight: 900;
+            font-weight: 400;
         }
 
         img {
@@ -383,210 +379,330 @@ footer {
     }
 }
 
-/*KURUMSAL*/
-.kurumsal_main {
+/*HİZMETLER*/
+.main_back {  
     position: relative;
-background-image: url('../wwwroot/svgss/kurumsal.webp');
-
-    background-blend-mode: darken;
     background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height:120vh;
-    top:-200px;
-    border-radius: 15px;
-
+    height: 100vh;
+    top: -100px; 
     div {
         text-align: center;
-        padding-top:10rem;
         position: relative;
-        h1:first-child{
-           padding-top:100px;
-        }
+        left: 15%;
+        top: 10%;
+        width: 65%;
         h1 {
             color: $main_color;
-            margin-bottom: -2rem;
-        }
-
+            margin-bottom: -1rem;
+            margin-left:3rem;
+        }     
     }
 }
-/*İLETİSİM SAYFASI*/
-.iletisim_main {
-    position: relative;
-    background-image: url('../wwwroot/svgss/iletisim.webp');
-   
-    background-blend-mode: darken;
-    background-position: top;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 120vh;
-    top: -200px;
-    border-radius: 15px;
-
-    div {
-        text-align: center;
-        padding-top: 10rem;
+.big_font{
+    font-size:4rem;
+}
+.havayolu{
+background-image: url('../wwwroot/svgss/havayolu.webp');
+}
+.denizyolu{
+background-image: url('../wwwroot/svgss/denizyolu.webp');
+}
+.depolama{
+background-image: url('../wwwroot/svgss/depolama.webp');
+}
+.danismanlik{
+background-image: url('../wwwroot/svgss/danısmanlikk.webp');
+}
+.karayolu{
+background-image: url('../wwwroot/svgss/karayolu.webp');
+}
+.sigorta {
+    background-image: url('../wwwroot/svgss/insurance.webp');
+}
+.silahvemuh{
+background-image: url('../wwwroot/svgss/silahvemuhimmat.webp');
+}
+    /*KURUMSAL*/
+    .kurumsal_main {
         position: relative;
-
-        h1:first-child {
-            padding-top: 100px;
-        }
-
-        h1 {
-            color: $main_color;
-            margin-bottom: -2rem;
-        }
-    }
-}
-
-
-
-
-
-/* MEDIA QUERIES*/
-
-@media (max-width: 480px) and (min-width: 320px){
-
-    .navbar_main {
-        top: 0;
-        opacity: .7;
-        position: sticky;
-        z-index: 999;
-        width: 80%;
-        margin: 0 auto;
-        background-color: white;
-        color: black;
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: center;
-        justify-content: space-around;
-        transition: ease-in-out .7s;
-}
-
-
-        .toggle_button {
-            display: block !important;
-        }
-
-        .nav_again {
-            display: none !important;
-        }
-
-        .hidden-visible {
-            display: block !important;
-        }
-    .home_main {
-        height: 100vh;
-        width: 110vw;
+        background-image: url('../wwwroot/svgss/kurumsal.webp');
+        background-blend-mode: darken;
+        background-position: top;
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 120vh;
+        top: -200px;
+        border-radius: 15px;
 
         div {
+            text-align: center;
+            padding-top: 10rem;
+            position: relative;
+
+            h1:first-child {
+                padding-top: 100px;
+            }
+
             h1 {
-                font-size: 4rem;
+                color: $main_color;
+                margin-bottom: -2rem;
+            }
+        }
+    }
+    /*İLETİSİM SAYFASI*/
+    .iletisim_main {
+        position: relative;
+        background-image: url('../wwwroot/svgss/iletisim.webp');
+        background-blend-mode: darken;
+        background-position: top;
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 120vh;
+        top: -200px;
+        border-radius: 15px;
+
+        div {
+            text-align: center;
+            padding-top: 10rem;
+            position: relative;
+
+            h1:first-child {
+                padding-top: 100px;
             }
 
-            p {
-                font-size: 2rem;
-            }
-
-            button {
-                font-size: 1.5rem;
+            h1 {
+                color: $main_color;
+                margin-bottom: -2rem;
             }
         }
     }
 
-    #home_main2{
-        height:100vh;
-        width:110vw;
-        
-        div{
-                text-align:center;
-        h1{
-            font-size:3rem;
-           
-        }
-        p{
-            font-size:2rem;
-            color:black;
-        }
-        button{
-            font-size:1.5rem;
-        }
-            }
-    }
-    .layout_title{
-        font-size:50px;
-    }
-    .slider {
-      
-        .slides {
-            
-            flex-direction: column;
-            
-            padding-left:50px;
-            
 
-            .slide {
-                
+    /* MEDIA QUERIES*/
 
-                .card {
-                    width:110%;
-                    .card-body{
-                        font-size:12px;
+    @media (max-width: 480px) and (min-width: 300px) {
+
+        .navbar_main {
+            top: 0;
+            opacity: 1;
+            position: sticky;
+            z-index: 999;
+            height:100px;
+            width: 80%;
+            margin: 0 auto;
+            background-color: white;
+            color: black;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-evenly;
+            transition: ease-in-out .7s;         
+        }
+
+        .nav_againn {           
+
+            .nav {
+                a {
+
+                    img {
+                        width: 100px !important;
+                        margin-left: auto;
                     }
-                    
                 }
             }
         }
-        .prev,.next{
-            display:none;
-        }
-    }
+        .nav_again {
+            display: none !important;
 
-    .kurumsal_main{
-        div{
-            h1{
-                font-size:5rem;
+
+
+            .nav-hover {
+
+
+                a {
+                    margin-top: -3rem !important;
+                    font-weight: 400 !important;
+                    font-size: 1.4rem !important;
+                }
+            }
+
+            .parent-link {
+                position: absolute;
+                margin-top: 2.4rem;
+
+
+                a {
+                    font-weight: 400;
+                    font-size: 1.4rem !important;
+                }
+
+                .sub-links {
+                    background-color:white !important;
+                    padding:10px;
+
+                    a {
+                        font-weight: 400 !important;
+                        font-size: 1.2rem !important;
+                    }
+                }
             }
         }
-    }
-    .cards_container {
-       
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        grid-column-gap: 50px;
-        grid-row-gap: 30px;
 
-    
-    }
-    .hizmetler_h1{
-        font-size:5rem;
-    }
-    .havayolu_maindiv{
-        flex-direction:column;
-    }
-    .iletisim_main{
-        div{
-            h1{
-                font-size:5rem;
-            }
-        }
-    }
-    .container{
-
-    .iletisim_container{
-        display:flex;
-        flex-direction:column !important;
-        .iletisim_container2{
-          margin-top:5rem !important;
-        }
-        iframe{
+        .toggle_button {
+            display: block !important;
            
         }
+      
+
+        .home_main {
+            height: 100vh;
+            width: 110vw;
+
+            div {
+                h1 {
+                    font-size: 4rem;
+                }
+
+                p {
+                    font-size: 2rem;
+                }
+
+                button {
+                    font-size: 1.5rem;
+                }
+            }
+        }
+
+        #home_main2 {
+            height: 100vh;
+            width: 110vw;
+
+            div {
+                text-align: center;
+
+                h1 {
+                    font-size: 3rem;
+                }
+
+                p {
+                    font-size: 2rem;
+                    color: black;
+                }
+
+                button {
+                    font-size: 1.5rem;
+                }
+            }
+        }
+
+        .layout_title {
+            font-size: 50px;
+        }
+
+        .slider {
+
+            .slides {
+                flex-direction: column;
+                padding-left: 50px;
+
+
+                .slide {
+
+
+                    .card {
+                        width: 110%;
+
+                        .card-body {
+                            font-size: 12px;
+                        }
+                    }
+                }
+            }
+
+            .prev, .next {
+                display: none;
+            }
+        }
+
+        .kurumsal_main {
+            div {
+                h1 {
+                    font-size: 5rem;
+                }
+            }
+        }
+
+        .cards_container {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            grid-column-gap: 50px;
+            grid-row-gap: 30px;
+        }
+
+        .hizmetler_h1 {
+            font-size: 5rem;
+        }
+
+        .havayolu_maindiv {
+            flex-direction: column;
+        }
+
+        .iletisim_main {
+            div {
+                h1 {
+                    font-size: 5rem;
+                }
+            }
+        }
+
+        .container {
+
+            .iletisim_container {
+                display: flex;
+                flex-direction: column !important;
+
+                .iletisim_container2 {
+                    margin-top: 5rem !important;
+                }
+
+                iframe {
+                }
+            }
+        }
+        .main_back{
+            width:100%;
+
+            background-position:center;
+            div{
+                h1{
+                    font-size:4rem;
+                }
+            }
+        }
+        .hidden-visible {
+            display: block !important;
+        }
+        .havayolu_maindiv{
+            div{
+                .big_font{
+                    font-size:2rem;
+                }
+                ul{
+                    li{
+                        font-size:1.5rem !important;
+                    }
+                }
+            }
+        }
+       
+
+        footer {
+            flex-direction: column;
+            margin-left:2rem;
+        }
     }
-    }
-    footer {
-        flex-direction: column;
-    }
-}
