--- a/Views/Hizmetlerimiz/Danismanlik.cshtml
+++ b/Views/Hizmetlerimiz/Danismanlik.cshtml
@@ -6,22 +6,22 @@
 <head>
     <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
 </head>
+<div class="main_back danismanlik">
+    <div>
+        <h1>DANIŞMANLIK HİZMETLERİ</h1>
+    </div>
+</div>
 <div class="container body-content">
 
-
-    <h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Danışmanlık Hizmetleri</h1>
     <div class="havayolu_maindiv">
-        <div>
-            <img src="~/wwwroot/svgss/danısmanlikk.webp" />
-        </div>
+
         <div>
 
-            <p>
+            <p class="big_font">
                 Lojistik alanındaki yenilikleri ve gelişmeleri takip ederek müşterilerime özel çözümler sunmaktayız.
 
             </p>
-            <ul style="font-size:1.5rem;">
-            </ul>
+
         </div>
     </div>
 
