--- a/Views/Hizmetlerimiz/DenizYoluTasimaciligi.cshtml
+++ b/Views/Hizmetlerimiz/DenizYoluTasimaciligi.cshtml
@@ -4,22 +4,26 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <head>
-    <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
+    <link href="/Content/mainstyle.min.css" rel="stylesheet" />
 </head>
+
+<div class="main_back denizyolu">
+    <div>
+        <h1>DENİZYOLU TAŞIMACILIĞI</h1>
+    </div>
+</div>
+
 <div class="container body-content">
 
-<h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Denizyolu Taşımacılığı</h1>
+
 <div class="havayolu_maindiv">
+
     <div>
 
-        <img src="~/wwwroot/svgss/denizyolu.webp" />
-    </div>
-    <div>
-
-        <p>
+        <p class="big_font">
             Global alandaki çözüm ortaklarımız ile denizyolu taşımacılığında, tüm dünya limanlarına hizmet sağlamaktayız.<br /><br /> Alanında deneyimli kadromuz ile zamanında ve etkin lojistik çözümler sunmaktayız.
         </p>
-        <ul style="font-size:1.5rem;">
+        <ul style="font-size: 4rem;">
             <li> LCL / Parsiyel Konteyner</li>
             <li>FCL / Full Konteyner</li>
             <li>Transit Taşımacılık</li>
