--- a/Views/Hizmetlerimiz/DepolamaHizmetleri.cshtml
+++ b/Views/Hizmetlerimiz/DepolamaHizmetleri.cshtml
@@ -7,22 +7,22 @@
 <head>
     <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
 </head>
+<div class="main_back depolama">
+    <div>
+        <h1>DEPOLAMA HİZMETLERİ</h1>
+    </div>
+</div>
 <div class="container body-content">
 
-<h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Depolama Hizmetleri</h1>
+
 <div class="havayolu_maindiv">
-    <div>
-        <img src="~/wwwroot/svgss/depolama.webp" />
-     
 
-    </div>
     <div>
 
-        <p>
+        <p class="big_font">
             Depo tedarik ağımız ile kısa veya uzun vadeli depolama hizmeti sunmaktayız.
         </p>
-        <ul style="font-size:1.5rem;">
-        </ul>
+
     </div>
 </div>
 
