--- a/Views/Hizmetlerimiz/Sigorta.cshtml
+++ b/Views/Hizmetlerimiz/Sigorta.cshtml
@@ -6,22 +6,25 @@
 <head>
     <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
 </head>
-<div class="container body-content">
-
-<h1 class="hizmetler_h1" style="text-align:right; margin-bottom:5.5rem;">Sigorta Hizmetleri</h1>
-<div class="havayolu_maindiv">
+<div class="main_back sigorta">
     <div>
-
-        <img src="~/wwwroot/svgss/insurance.webp" />
-    </div>
-    <div>
-
-        <p>
-            Anlaşmalı olduğumuz sigorta şirketleri ile lojistik taşımalarında hasar görme riskini teminat altına alarak poliçe servisi sunmaktayız.
-        </p>
-        <ul style="font-size:1.5rem;">
-        </ul>
+        <h1>SİGORTA HİZMETLERİ</h1>
     </div>
 </div>
+
+
+<div class="container body-content">
+
+
+    <div class="havayolu_maindiv">
+ 
+        <div>
+
+            <p class="big_font">
+                Anlaşmalı olduğumuz sigorta şirketleri ile lojistik taşımalarında hasar görme riskini teminat altına alarak poliçe servisi sunmaktayız.
+            </p>
+
+        </div>
+    </div>
 
 </div>
