--- a/Views/Home/Kurumsal.cshtml
+++ b/Views/Home/Kurumsal.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-bQLm8mXyAaY+nDg+ySkdBLvL8tZs/LeVFKvxzzn1q3v1lffyQfiYcYnJgyAZtZzv8nmRw/xlh+aOgD0UD3X1yw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
 </head>
+<body>
 
 <div class=kurumsal_main>
     <div>
@@ -106,3 +107,5 @@
     </div>
 
 </div>
+<script src="~/Content/Jscript.js"></script>
+</body>
