--- a/Views/Home/İletişim.cshtml
+++ b/Views/Home/İletişim.cshtml
@@ -7,6 +7,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
 </head>
+<body>
 
 <div class=iletisim_main>
     <div>
@@ -55,4 +56,6 @@
 </div>
 
 
+<script src="~/Content/Jscript.js"></script>
 
+</body>
